--- a/public/css/app.css
+++ b/public/css/app.css
@@ -155,6 +155,8 @@ ul.dropdown-content {
     position: absolute;
     bottom: 0;
     left: 0;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
 
     display: none;
@@ -235,6 +237,7 @@ ul.dropdown-content li svg {
 ul.dropdown-content li.logout:hover {
     background: red;
 }
+
 
 
 
