--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,20 @@ a:focus {
   justify-content: space-around;
 }
 
+.flex-beet {
+  justify-content: space-between;
+}
+
+.flex-cent {
+  justify-content: center;
+}
+
 .flex-middle {
   align-items: center;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 /*============================
@@ -150,6 +162,10 @@ a:focus {
   font-family: "Roboto", sans-serif;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 #header_svgs {
   position: absolute;
   top: 0;
@@ -196,7 +212,7 @@ nav {
   z-index: 4;
 }
 nav ul {
-  margin: 2em;
+  margin: 2em 2em 0 2em;
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -283,10 +299,8 @@ ul.dropdown-content li.logout:hover {
 }
 
 .home_wrappers {
-  height: 70vh;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  height: 86vh;
+  padding-bottom: 3vh;
 }
 
 /*==============================================
@@ -299,18 +313,20 @@ ul.dropdown-content li.logout:hover {
   overflow: hidden;
 }
 .preview__header {
-  background: #1E293B;
-  transition: border 0.2s ease-out;
+  transition: background 0.2s ease-out;
 }
 .preview__header__title {
+  -webkit-text-stroke: 1px #000;
+  color: #fff;
   padding: 0.6em;
   transition: color 0.2s ease-out;
 }
 .preview__body {
-  background: #334155;
+  background: #eee;
 }
 .preview__body__title {
   padding: 1rem;
+  color: #000;
 }
 .preview__body__panels {
   flex-wrap: wrap;
@@ -320,7 +336,7 @@ ul.dropdown-content li.logout:hover {
   margin: 1rem 0;
   height: 120px;
   flex: 0 0 26%;
-  transition: border 0.2s ease-out;
+  transition: background 0.2s ease-out;
 }
 
 /*==============================================
@@ -335,7 +351,7 @@ ul.dropdown-content li.logout:hover {
   overflow-y: auto;
 }
 .picker__table {
-  width: 80%;
+  width: 95%;
   height: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -417,8 +433,10 @@ ul.dropdown-content li.logout:hover {
 }
 .selected__wrapper__header__color {
   letter-spacing: 2px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 0.1em 1em;
   color: #fff;
-  -webkit-text-stroke: 1.4px #000;
+  -webkit-text-stroke: 1px #000;
 }
 .selected__wrapper__body {
   display: flex;
