--- a/resources/sass/_flex.scss
+++ b/resources/sass/_flex.scss
@@ -7,6 +7,15 @@
 .flex-sparound{
     justify-content: space-around;
 }
+.flex-beet{
+    justify-content: space-between;
+}
+.flex-cent{
+    justify-content: center;
+}
 .flex-middle{
     align-items: center;
+}
+.flex-col{
+    flex-direction: column;
 }
