--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -16,6 +16,9 @@
 
     font-family: "Roboto", sans-serif;
 }
+body,html{
+    overflow-x: hidden;
+}
 
 
 #header_svgs {
@@ -64,7 +67,7 @@ nav {
     justify-content: space-between;
     z-index: 4;
     ul {
-        margin: 2em;
+        margin: 2em 2em 0 2em;
         display: flex;
         align-items: center;
         list-style-type: none;
@@ -155,11 +158,9 @@ ul.dropdown-content {
 }
 
 .home_wrappers{
-    height: 70vh;
+    height: 86vh;
 
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    padding-bottom: 3vh;
 }
 
 
@@ -173,11 +174,13 @@ ul.dropdown-content {
     overflow: hidden;
 
     &__header{
-        background: #1E293B;
+        //background: #1E293B;
 
-        transition: border 0.2s ease-out;
+        transition: background 0.2s ease-out;
 
         &__title{
+            -webkit-text-stroke: 1px #000;
+            color: #fff;
             padding: 0.6em;
 
             transition: color 0.2s ease-out;
@@ -185,10 +188,12 @@ ul.dropdown-content {
     }
 
     &__body{
-        background: #334155;
+        //background: #334155;
+        background: #eee;
 
         &__title{
             padding: 1rem;
+            color: #000;
         }
 
         &__panels{
@@ -199,7 +204,7 @@ ul.dropdown-content {
                 height: 120px;
                 flex: 0 0 26%;
 
-                transition: border 0.2s ease-out;
+                transition: background 0.2s ease-out;
             }
         }
     }
@@ -220,7 +225,7 @@ ul.dropdown-content {
     overflow-y: auto;
 
     &__table{
-        width: 80%;
+        width: 95%;
         height: 100%;
 
         margin-right: auto;
@@ -339,8 +344,10 @@ ul.dropdown-content {
 
             &__color{
                 letter-spacing: 2px;
+                background: rgba(0,0,0,0.6);
+                padding: 0.1em 1em;
                 color: #fff;
-                -webkit-text-stroke: 1.4px #000;
+                -webkit-text-stroke: 1px #000;
             }
         }
 
