--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -3,6 +3,8 @@
 @import 'flex';
 @import 'text';
 
+$breakpoint: 1270px;
+
 
 /*==============================================
 
@@ -169,6 +171,13 @@ ul.dropdown-content {
         Live Preview
 
 ==============================================*/
+.preview_wrapper{
+    display: flex;
+
+    @media screen and (max-width: $breakpoint){
+        display: none;
+    }
+}
 .preview{
     height: 45vh;
     overflow: hidden;
@@ -275,10 +284,7 @@ ul.dropdown-content {
 .selected{
     background: #eee;
     height: 30vh;
-
-    //@media screen and (max-width: 1590px){
-    //    height: fit-content;
-    //}
+    min-height: 300px;
 
     margin-top: 2em;
 
@@ -288,7 +294,7 @@ ul.dropdown-content {
         position: absolute;
         top: 0;
         right: 0;
-        height: 50%;
+        width: 90%;
 
         filter: drop-shadow(0 0 2px black);
 
@@ -302,7 +308,7 @@ ul.dropdown-content {
         position: absolute;
         bottom: 0;
         left: 0;
-        height: 50%;
+        width: 90%;
 
         filter: drop-shadow(0 0 2px black);
 
@@ -365,10 +371,14 @@ ul.dropdown-content {
             //}
 
             &__table{
+                width: 80%;
+
                 table{
+                    width: 100%;
                     border-collapse: collapse;
 
                     th,td{
+                        width: 50%;
                         padding: 1em;
                         border: 1px solid #ddd;
 
