--- a/resources/sass/_text.scss
+++ b/resources/sass/_text.scss
@@ -8,6 +8,13 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+@mixin roboto{
+    font-family: 'Roboto', sans-serif;
+}
+@mixin montserrat{
+    font-family: 'Montserrat', sans-serif;
+}
+
 
 /*============================
     Positioning
