--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -260,7 +260,7 @@ ul.dropdown-content {
 ==============================================*/
 .picker{
     width: 100%;
-    height: 55vh;
+    height: 50vh;
 
     background: #eee;
 
@@ -473,5 +473,11 @@ ul.dropdown-content {
             }
         }
     }
+}
+
+
+
+code{
+    background: #000;
 }
 
