--- a/resources/sass/_modals.scss
+++ b/resources/sass/_modals.scss
@@ -22,6 +22,7 @@
     background-color: #fff;
     padding: 30px;
     max-width: 500px;
+    min-width: 400px;
     max-height: 100vh;
     border-radius: 4px;
     overflow-y: auto;
@@ -127,6 +128,9 @@
 
 .micromodal-slide.is-open {
     display: block;
+
+    position: relative;
+    z-index: 999999;
 }
 
 .micromodal-slide[aria-hidden="false"] .modal__overlay {
@@ -167,6 +171,20 @@
     list-style-type: none;
 
     &__item{
+        display: block;
 
+        padding: 1em;
+        text-align: center;
+        width: 100%;
+
+        background: rgba(0,0,0,0);
+
+        cursor: pointer;
+
+        transition: background 0.2s ease-out;
+
+        &:hover{
+            background: rgba(0,0,0,0.2);
+        }
     }
 }
