--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,6 +186,7 @@ a:focus {
   bottom: 0;
   height: 100%;
   width: 15px;
+  background: #273689;
   transform-origin: bottom;
   transform: scaleY(1);
   transition: transform 0.2s ease-out;
@@ -196,6 +197,7 @@ a:focus {
   top: 0;
   height: 100%;
   width: 15px;
+  background: #273689;
   transform-origin: top;
   transform: scaleY(1);
   transition: transform 0.2s ease-out;
@@ -424,6 +426,38 @@ a:focus {
 }
 .modal_menu__item:hover {
   background: rgba(0, 0, 0, 0.2);
+}
+
+form {
+  padding: 3em 4em 2em 4em;
+  background: #e0e0e0;
+}
+form .form-row {
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+form .form-row h2 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+form .form-row label {
+  margin-bottom: 5px;
+  font-size: 1.1rem;
+}
+form .form-row input {
+  padding: 0.5em;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #666;
+  font-size: 1.1rem;
+}
+form .form-row button {
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
 }
 
 /*==============================================
