--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -32,6 +32,8 @@
         height: 100%;
         width: 15px;
 
+        background: $mainColor;
+
         transform-origin: bottom;
         transform: scaleY(1);
 
@@ -43,6 +45,8 @@
         top: 0;
         height: 100%;
         width: 15px;
+
+        background: $mainColor;
 
         transform-origin: top;
         transform: scaleY(1);
