--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -8,6 +8,7 @@ $breakpoint: 1270px;
 @import 'button';
 @import 'modals';
 @import 'form';
+@import 'addons';
 
 
 /*==============================================
