--- a/resources/sass/_addons.scss
+++ b/resources/sass/_addons.scss
@@ -13,5 +13,9 @@
         color: #fff;
         background: #ef5350;
     }
+    &-success{
+        color: #fff;
+        background: #4caf50;
+    }
 
 }
