--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -1,7 +1,11 @@
 form{
     padding: 3em 4em 2em 4em;
 
-    background: #e0e0e0;
+    width: 30vw;
+
+    &:not(.no-bg){
+        background: #e0e0e0;
+    }
 
     .form-row{
         margin-bottom: 1em;
@@ -12,9 +16,11 @@ form{
 
 
         h2{
-            margin-bottom: 10px;
+            margin-bottom: 1em;
 
             text-align: center;
+
+            @include montserrat;
         }
 
 
