--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -26,3 +26,12 @@ a {
 
 
 
+/*=======================================
+*       Mixins
+=======================================*/
+@mixin center{
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
