--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -20,7 +20,7 @@ form{
 
             text-align: center;
 
-            @include montserrat;
+            @include font('Montserrat');
         }
 
 
