--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -12,7 +12,7 @@
     outline: none;
     border: none;
 
-    @include montserrat;
+    @include font('Montserrat');
     color: #fff;
 
     cursor: pointer;
@@ -64,5 +64,45 @@
 }
 
 
+
+/*==============================================
+
+        Buttons Social Login
+
+==============================================*/
+.btn_login_social{
+
+    width: 100%;
+    padding: 0.5em 1em;
+    margin: 1em 0;
+
+    display: flex;
+    justify-content: flex-start;
+
+    line-height: 30px;
+    font-size: 24px;
+
+    color: #fff;
+
+    svg{
+        margin: 0 2em 0 1em;
+        height: 30px;
+
+        fill: #fff;
+    }
+
+    @include font('Montserrat');
+
+    &__red{
+        background: #F44336;
+    }
+    &__black{
+        background: #111;
+    }
+    &__blue{
+        background: #0777E9;
+    }
+
+}
 
 
