--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -93,14 +93,17 @@
 
     @include font('Montserrat');
 
-    &__red{
+    &__google{
         background: #F44336;
     }
-    &__black{
+    &__github{
         background: #111;
     }
-    &__blue{
-        background: #0777E9;
+    &__facebook{
+        background: #1877F2;
+    }
+    &__twitter{
+        background: #1DA1F2;
     }
 
 }
