--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,6 +131,10 @@ ul.dropdown-content li.logout:hover {
   background: red;
 }
 
+form a {
+  color: #000;
+}
+
 /*==============================================
 
         Classes
@@ -151,21 +155,384 @@ ul.dropdown-content li.logout:hover {
 /*============================
     Widths
 =============================*/
+.w05 {
+  width: 5%;
+}
+
+.w06 {
+  width: 6%;
+}
+
+.w07 {
+  width: 7%;
+}
+
+.w08 {
+  width: 8%;
+}
+
+.w09 {
+  width: 9%;
+}
+
+.w10 {
+  width: 10%;
+}
+
+.w11 {
+  width: 11%;
+}
+
+.w12 {
+  width: 12%;
+}
+
+.w13 {
+  width: 13%;
+}
+
+.w14 {
+  width: 14%;
+}
+
+.w15 {
+  width: 15%;
+}
+
+.w16 {
+  width: 16%;
+}
+
+.w17 {
+  width: 17%;
+}
+
+.w18 {
+  width: 18%;
+}
+
+.w19 {
+  width: 19%;
+}
+
+.w20 {
+  width: 20%;
+}
+
+.w21 {
+  width: 21%;
+}
+
+.w22 {
+  width: 22%;
+}
+
+.w23 {
+  width: 23%;
+}
+
+.w24 {
+  width: 24%;
+}
+
+.w25 {
+  width: 25%;
+}
+
+.w26 {
+  width: 26%;
+}
+
+.w27 {
+  width: 27%;
+}
+
+.w28 {
+  width: 28%;
+}
+
+.w29 {
+  width: 29%;
+}
+
+.w30 {
+  width: 30%;
+}
+
+.w31 {
+  width: 31%;
+}
+
+.w32 {
+  width: 32%;
+}
+
+.w33 {
+  width: 33%;
+}
+
+.w34 {
+  width: 34%;
+}
+
+.w35 {
+  width: 35%;
+}
+
+.w36 {
+  width: 36%;
+}
+
+.w37 {
+  width: 37%;
+}
+
+.w38 {
+  width: 38%;
+}
+
+.w39 {
+  width: 39%;
+}
+
 .w40 {
   width: 40%;
 }
-@media screen and (max-width: 1270px) {
-  .w40 {
-    width: 90%;
-  }
+
+.w41 {
+  width: 41%;
+}
+
+.w42 {
+  width: 42%;
+}
+
+.w43 {
+  width: 43%;
+}
+
+.w44 {
+  width: 44%;
 }
 
 .w45 {
   width: 45%;
 }
 
+.w46 {
+  width: 46%;
+}
+
+.w47 {
+  width: 47%;
+}
+
+.w48 {
+  width: 48%;
+}
+
+.w49 {
+  width: 49%;
+}
+
+.w50 {
+  width: 50%;
+}
+
+.w51 {
+  width: 51%;
+}
+
+.w52 {
+  width: 52%;
+}
+
+.w53 {
+  width: 53%;
+}
+
+.w54 {
+  width: 54%;
+}
+
+.w55 {
+  width: 55%;
+}
+
+.w56 {
+  width: 56%;
+}
+
+.w57 {
+  width: 57%;
+}
+
+.w58 {
+  width: 58%;
+}
+
+.w59 {
+  width: 59%;
+}
+
 .w60 {
   width: 60%;
+}
+
+.w61 {
+  width: 61%;
+}
+
+.w62 {
+  width: 62%;
+}
+
+.w63 {
+  width: 63%;
+}
+
+.w64 {
+  width: 64%;
+}
+
+.w65 {
+  width: 65%;
+}
+
+.w66 {
+  width: 66%;
+}
+
+.w67 {
+  width: 67%;
+}
+
+.w68 {
+  width: 68%;
+}
+
+.w69 {
+  width: 69%;
+}
+
+.w70 {
+  width: 70%;
+}
+
+.w71 {
+  width: 71%;
+}
+
+.w72 {
+  width: 72%;
+}
+
+.w73 {
+  width: 73%;
+}
+
+.w74 {
+  width: 74%;
+}
+
+.w75 {
+  width: 75%;
+}
+
+.w76 {
+  width: 76%;
+}
+
+.w77 {
+  width: 77%;
+}
+
+.w78 {
+  width: 78%;
+}
+
+.w79 {
+  width: 79%;
+}
+
+.w80 {
+  width: 80%;
+}
+
+.w81 {
+  width: 81%;
+}
+
+.w82 {
+  width: 82%;
+}
+
+.w83 {
+  width: 83%;
+}
+
+.w84 {
+  width: 84%;
+}
+
+.w85 {
+  width: 85%;
+}
+
+.w86 {
+  width: 86%;
+}
+
+.w87 {
+  width: 87%;
+}
+
+.w88 {
+  width: 88%;
+}
+
+.w89 {
+  width: 89%;
+}
+
+.w90 {
+  width: 90%;
+}
+
+.w91 {
+  width: 91%;
+}
+
+.w92 {
+  width: 92%;
+}
+
+.w93 {
+  width: 93%;
+}
+
+.w94 {
+  width: 94%;
+}
+
+.w95 {
+  width: 95%;
+}
+
+.w96 {
+  width: 96%;
+}
+
+.w97 {
+  width: 97%;
+}
+
+.w98 {
+  width: 98%;
+}
+
+.w99 {
+  width: 99%;
 }
 
 .w100 {
@@ -175,16 +542,404 @@ ul.dropdown-content li.logout:hover {
 /*============================
     Margins
 =============================*/
-.mb-1 {
-  margin-bottom: 1rem;
+.m-0 {
+  margin: 0rem;
+}
+
+.mt-0 {
+  margin: 0rem;
+}
+
+.mr-0 {
+  margin: 0rem;
+}
+
+.mb-0 {
+  margin: 0rem;
+}
+
+.ml-0 {
+  margin: 0rem;
+}
+
+.m-05 {
+  margin: 0.5rem;
+}
+
+.mt-05 {
+  margin: 0.5rem;
+}
+
+.mr-05 {
+  margin: 0.5rem;
+}
+
+.mb-05 {
+  margin: 0.5rem;
+}
+
+.ml-05 {
+  margin: 0.5rem;
 }
 
 .m-1 {
   margin: 1rem;
 }
 
-.m-05 {
-  margin: 0.5rem;
+.mt-1 {
+  margin: 1rem;
+}
+
+.mr-1 {
+  margin: 1rem;
+}
+
+.mb-1 {
+  margin: 1rem;
+}
+
+.ml-1 {
+  margin: 1rem;
+}
+
+.m-15 {
+  margin: 1.5rem;
+}
+
+.mt-15 {
+  margin: 1.5rem;
+}
+
+.mr-15 {
+  margin: 1.5rem;
+}
+
+.mb-15 {
+  margin: 1.5rem;
+}
+
+.ml-15 {
+  margin: 1.5rem;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.mt-2 {
+  margin: 2rem;
+}
+
+.mr-2 {
+  margin: 2rem;
+}
+
+.mb-2 {
+  margin: 2rem;
+}
+
+.ml-2 {
+  margin: 2rem;
+}
+
+.m-25 {
+  margin: 2.5rem;
+}
+
+.mt-25 {
+  margin: 2.5rem;
+}
+
+.mr-25 {
+  margin: 2.5rem;
+}
+
+.mb-25 {
+  margin: 2.5rem;
+}
+
+.ml-25 {
+  margin: 2.5rem;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.mt-3 {
+  margin: 3rem;
+}
+
+.mr-3 {
+  margin: 3rem;
+}
+
+.mb-3 {
+  margin: 3rem;
+}
+
+.ml-3 {
+  margin: 3rem;
+}
+
+.m-35 {
+  margin: 3.5rem;
+}
+
+.mt-35 {
+  margin: 3.5rem;
+}
+
+.mr-35 {
+  margin: 3.5rem;
+}
+
+.mb-35 {
+  margin: 3.5rem;
+}
+
+.ml-35 {
+  margin: 3.5rem;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+.mt-4 {
+  margin: 4rem;
+}
+
+.mr-4 {
+  margin: 4rem;
+}
+
+.mb-4 {
+  margin: 4rem;
+}
+
+.ml-4 {
+  margin: 4rem;
+}
+
+.m-45 {
+  margin: 4.5rem;
+}
+
+.mt-45 {
+  margin: 4.5rem;
+}
+
+.mr-45 {
+  margin: 4.5rem;
+}
+
+.mb-45 {
+  margin: 4.5rem;
+}
+
+.ml-45 {
+  margin: 4.5rem;
+}
+
+.m-5 {
+  margin: 5rem;
+}
+
+.mt-5 {
+  margin: 5rem;
+}
+
+.mr-5 {
+  margin: 5rem;
+}
+
+.mb-5 {
+  margin: 5rem;
+}
+
+.ml-5 {
+  margin: 5rem;
+}
+
+.m-55 {
+  margin: 5.5rem;
+}
+
+.mt-55 {
+  margin: 5.5rem;
+}
+
+.mr-55 {
+  margin: 5.5rem;
+}
+
+.mb-55 {
+  margin: 5.5rem;
+}
+
+.ml-55 {
+  margin: 5.5rem;
+}
+
+.m-6 {
+  margin: 6rem;
+}
+
+.mt-6 {
+  margin: 6rem;
+}
+
+.mr-6 {
+  margin: 6rem;
+}
+
+.mb-6 {
+  margin: 6rem;
+}
+
+.ml-6 {
+  margin: 6rem;
+}
+
+.m-65 {
+  margin: 6.5rem;
+}
+
+.mt-65 {
+  margin: 6.5rem;
+}
+
+.mr-65 {
+  margin: 6.5rem;
+}
+
+.mb-65 {
+  margin: 6.5rem;
+}
+
+.ml-65 {
+  margin: 6.5rem;
+}
+
+.m-7 {
+  margin: 7rem;
+}
+
+.mt-7 {
+  margin: 7rem;
+}
+
+.mr-7 {
+  margin: 7rem;
+}
+
+.mb-7 {
+  margin: 7rem;
+}
+
+.ml-7 {
+  margin: 7rem;
+}
+
+.m-75 {
+  margin: 7.5rem;
+}
+
+.mt-75 {
+  margin: 7.5rem;
+}
+
+.mr-75 {
+  margin: 7.5rem;
+}
+
+.mb-75 {
+  margin: 7.5rem;
+}
+
+.ml-75 {
+  margin: 7.5rem;
+}
+
+.m-8 {
+  margin: 8rem;
+}
+
+.mt-8 {
+  margin: 8rem;
+}
+
+.mr-8 {
+  margin: 8rem;
+}
+
+.mb-8 {
+  margin: 8rem;
+}
+
+.ml-8 {
+  margin: 8rem;
+}
+
+.m-85 {
+  margin: 8.5rem;
+}
+
+.mt-85 {
+  margin: 8.5rem;
+}
+
+.mr-85 {
+  margin: 8.5rem;
+}
+
+.mb-85 {
+  margin: 8.5rem;
+}
+
+.ml-85 {
+  margin: 8.5rem;
+}
+
+.m-9 {
+  margin: 9rem;
+}
+
+.mt-9 {
+  margin: 9rem;
+}
+
+.mr-9 {
+  margin: 9rem;
+}
+
+.mb-9 {
+  margin: 9rem;
+}
+
+.ml-9 {
+  margin: 9rem;
+}
+
+.m-95 {
+  margin: 9.5rem;
+}
+
+.mt-95 {
+  margin: 9.5rem;
+}
+
+.mr-95 {
+  margin: 9.5rem;
+}
+
+.mb-95 {
+  margin: 9.5rem;
+}
+
+.ml-95 {
+  margin: 9.5rem;
 }
 
 /*=======================================
@@ -193,6 +948,10 @@ ul.dropdown-content li.logout:hover {
 .center {
   margin-right: auto;
   margin-left: auto;
+}
+
+.in-flex-2elements > * {
+  width: 45%;
 }
 
 /*============================
@@ -485,23 +1244,43 @@ ul.dropdown-content li.logout:hover {
   font-size: 24px;
   color: #fff;
   font-family: "Montserrat", sans-serif;
+  transition: background 0.2s ease-in-out;
+}
+.btn_login_social__google {
+  background: #F44336;
+}
+.btn_login_social__google:hover {
+  background: #f32c1e;
+}
+.btn_login_social__github {
+  background: #111111;
+}
+.btn_login_social__github:hover {
+  background: #040404;
+}
+.btn_login_social__facebook {
+  background: #1877F2;
+}
+.btn_login_social__facebook:hover {
+  background: #0d6ae4;
+}
+.btn_login_social__twitter {
+  background: #1DA1F2;
+}
+.btn_login_social__twitter:hover {
+  background: #0d95e8;
 }
 .btn_login_social svg {
   margin: 0 2em 0 1em;
   height: 30px;
   fill: #fff;
 }
-.btn_login_social__google {
-  background: #F44336;
+.btn_login_social svg.btn_login_social__svg_animated {
+  transform: translateX(0);
+  transition: transform 0.2s ease-out;
 }
-.btn_login_social__github {
-  background: #111;
-}
-.btn_login_social__facebook {
-  background: #1877F2;
-}
-.btn_login_social__twitter {
-  background: #1DA1F2;
+.btn_login_social:hover svg.btn_login_social__svg_animated {
+  transform: translateX(10px);
 }
 
 @-webkit-keyframes mmfadeIn {
@@ -821,8 +1600,391 @@ form .form-row button {
   .hide_on_mobile {
     display: none;
   }
-}
 
+  .on_mobile__width__w05 {
+    width: 5%;
+  }
+
+  .on_mobile__width__w06 {
+    width: 6%;
+  }
+
+  .on_mobile__width__w07 {
+    width: 7%;
+  }
+
+  .on_mobile__width__w08 {
+    width: 8%;
+  }
+
+  .on_mobile__width__w09 {
+    width: 9%;
+  }
+
+  .on_mobile__width__w10 {
+    width: 10%;
+  }
+
+  .on_mobile__width__w11 {
+    width: 11%;
+  }
+
+  .on_mobile__width__w12 {
+    width: 12%;
+  }
+
+  .on_mobile__width__w13 {
+    width: 13%;
+  }
+
+  .on_mobile__width__w14 {
+    width: 14%;
+  }
+
+  .on_mobile__width__w15 {
+    width: 15%;
+  }
+
+  .on_mobile__width__w16 {
+    width: 16%;
+  }
+
+  .on_mobile__width__w17 {
+    width: 17%;
+  }
+
+  .on_mobile__width__w18 {
+    width: 18%;
+  }
+
+  .on_mobile__width__w19 {
+    width: 19%;
+  }
+
+  .on_mobile__width__w20 {
+    width: 20%;
+  }
+
+  .on_mobile__width__w21 {
+    width: 21%;
+  }
+
+  .on_mobile__width__w22 {
+    width: 22%;
+  }
+
+  .on_mobile__width__w23 {
+    width: 23%;
+  }
+
+  .on_mobile__width__w24 {
+    width: 24%;
+  }
+
+  .on_mobile__width__w25 {
+    width: 25%;
+  }
+
+  .on_mobile__width__w26 {
+    width: 26%;
+  }
+
+  .on_mobile__width__w27 {
+    width: 27%;
+  }
+
+  .on_mobile__width__w28 {
+    width: 28%;
+  }
+
+  .on_mobile__width__w29 {
+    width: 29%;
+  }
+
+  .on_mobile__width__w30 {
+    width: 30%;
+  }
+
+  .on_mobile__width__w31 {
+    width: 31%;
+  }
+
+  .on_mobile__width__w32 {
+    width: 32%;
+  }
+
+  .on_mobile__width__w33 {
+    width: 33%;
+  }
+
+  .on_mobile__width__w34 {
+    width: 34%;
+  }
+
+  .on_mobile__width__w35 {
+    width: 35%;
+  }
+
+  .on_mobile__width__w36 {
+    width: 36%;
+  }
+
+  .on_mobile__width__w37 {
+    width: 37%;
+  }
+
+  .on_mobile__width__w38 {
+    width: 38%;
+  }
+
+  .on_mobile__width__w39 {
+    width: 39%;
+  }
+
+  .on_mobile__width__w40 {
+    width: 40%;
+  }
+
+  .on_mobile__width__w41 {
+    width: 41%;
+  }
+
+  .on_mobile__width__w42 {
+    width: 42%;
+  }
+
+  .on_mobile__width__w43 {
+    width: 43%;
+  }
+
+  .on_mobile__width__w44 {
+    width: 44%;
+  }
+
+  .on_mobile__width__w45 {
+    width: 45%;
+  }
+
+  .on_mobile__width__w46 {
+    width: 46%;
+  }
+
+  .on_mobile__width__w47 {
+    width: 47%;
+  }
+
+  .on_mobile__width__w48 {
+    width: 48%;
+  }
+
+  .on_mobile__width__w49 {
+    width: 49%;
+  }
+
+  .on_mobile__width__w50 {
+    width: 50%;
+  }
+
+  .on_mobile__width__w51 {
+    width: 51%;
+  }
+
+  .on_mobile__width__w52 {
+    width: 52%;
+  }
+
+  .on_mobile__width__w53 {
+    width: 53%;
+  }
+
+  .on_mobile__width__w54 {
+    width: 54%;
+  }
+
+  .on_mobile__width__w55 {
+    width: 55%;
+  }
+
+  .on_mobile__width__w56 {
+    width: 56%;
+  }
+
+  .on_mobile__width__w57 {
+    width: 57%;
+  }
+
+  .on_mobile__width__w58 {
+    width: 58%;
+  }
+
+  .on_mobile__width__w59 {
+    width: 59%;
+  }
+
+  .on_mobile__width__w60 {
+    width: 60%;
+  }
+
+  .on_mobile__width__w61 {
+    width: 61%;
+  }
+
+  .on_mobile__width__w62 {
+    width: 62%;
+  }
+
+  .on_mobile__width__w63 {
+    width: 63%;
+  }
+
+  .on_mobile__width__w64 {
+    width: 64%;
+  }
+
+  .on_mobile__width__w65 {
+    width: 65%;
+  }
+
+  .on_mobile__width__w66 {
+    width: 66%;
+  }
+
+  .on_mobile__width__w67 {
+    width: 67%;
+  }
+
+  .on_mobile__width__w68 {
+    width: 68%;
+  }
+
+  .on_mobile__width__w69 {
+    width: 69%;
+  }
+
+  .on_mobile__width__w70 {
+    width: 70%;
+  }
+
+  .on_mobile__width__w71 {
+    width: 71%;
+  }
+
+  .on_mobile__width__w72 {
+    width: 72%;
+  }
+
+  .on_mobile__width__w73 {
+    width: 73%;
+  }
+
+  .on_mobile__width__w74 {
+    width: 74%;
+  }
+
+  .on_mobile__width__w75 {
+    width: 75%;
+  }
+
+  .on_mobile__width__w76 {
+    width: 76%;
+  }
+
+  .on_mobile__width__w77 {
+    width: 77%;
+  }
+
+  .on_mobile__width__w78 {
+    width: 78%;
+  }
+
+  .on_mobile__width__w79 {
+    width: 79%;
+  }
+
+  .on_mobile__width__w80 {
+    width: 80%;
+  }
+
+  .on_mobile__width__w81 {
+    width: 81%;
+  }
+
+  .on_mobile__width__w82 {
+    width: 82%;
+  }
+
+  .on_mobile__width__w83 {
+    width: 83%;
+  }
+
+  .on_mobile__width__w84 {
+    width: 84%;
+  }
+
+  .on_mobile__width__w85 {
+    width: 85%;
+  }
+
+  .on_mobile__width__w86 {
+    width: 86%;
+  }
+
+  .on_mobile__width__w87 {
+    width: 87%;
+  }
+
+  .on_mobile__width__w88 {
+    width: 88%;
+  }
+
+  .on_mobile__width__w89 {
+    width: 89%;
+  }
+
+  .on_mobile__width__w90 {
+    width: 90%;
+  }
+
+  .on_mobile__width__w91 {
+    width: 91%;
+  }
+
+  .on_mobile__width__w92 {
+    width: 92%;
+  }
+
+  .on_mobile__width__w93 {
+    width: 93%;
+  }
+
+  .on_mobile__width__w94 {
+    width: 94%;
+  }
+
+  .on_mobile__width__w95 {
+    width: 95%;
+  }
+
+  .on_mobile__width__w96 {
+    width: 96%;
+  }
+
+  .on_mobile__width__w97 {
+    width: 97%;
+  }
+
+  .on_mobile__width__w98 {
+    width: 98%;
+  }
+
+  .on_mobile__width__w99 {
+    width: 99%;
+  }
+
+  .on_mobile__width__w100 {
+    width: 100%;
+  }
+}
 /*Header Svgs*/
 #header_svgs {
   position: absolute;
