--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -131,6 +131,11 @@ ul.dropdown-content {
         }
     }
 }
+form{
+    a{
+        color: #000;
+    }
+}
 
 
 /*==============================================
