--- a/resources/sass/_mobile.scss
+++ b/resources/sass/_mobile.scss
@@ -1,5 +1,19 @@
-.hide_on_mobile{
-    @media screen and (max-width: $breakpoint){
+@media screen and (max-width: $breakpoint){
+    .hide_on_mobile{
         display: none;
+    }
+
+
+
+    @for $i from 5 through 100{
+        $class: #{$i};
+        @if $i < 10{
+            $class: '0' + #{$i};
+        }
+
+
+        .on_mobile__width__w#{$class}{
+            width: #{$i} + '%';
+        }
     }
 }
