--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1241,7 +1241,7 @@ form a {
   display: flex;
   justify-content: flex-start;
   line-height: 30px;
-  font-size: 24px;
+  font-size: 1em;
   color: #fff;
   font-family: "Montserrat", sans-serif;
   transition: background 0.2s ease-in-out;
