--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -71,7 +71,6 @@
 
 ==============================================*/
 .btn_login_social{
-
     width: 100%;
     padding: 0.5em 1em;
     margin: 1em 0;
@@ -80,13 +79,18 @@
     justify-content: flex-start;
 
     line-height: 30px;
-    font-size: 24px;
+    font-size: 1em;
 
     color: #fff;
     @include font('Montserrat');
 
 
     transition: background 0.2s ease-in-out;
+
+
+    & > span{
+
+    }
 
 
     $buttons: (
