--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  overflow-y: hidden;
   padding-bottom: 5rem;
 }
 
@@ -40,10 +39,10 @@ nav {
   position: relative;
   display: flex;
   justify-content: space-between;
-  z-index: 4;
+  z-index: 9999;
 }
 nav ul {
-  margin: 2em 2em 0 2em;
+  margin: 2em 2em 1em 2em;
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -156,790 +155,790 @@ form a {
     Widths
 =============================*/
 .w05 {
-  width: 5%;
+  width: 5% !important;
 }
 
 .w06 {
-  width: 6%;
+  width: 6% !important;
 }
 
 .w07 {
-  width: 7%;
+  width: 7% !important;
 }
 
 .w08 {
-  width: 8%;
+  width: 8% !important;
 }
 
 .w09 {
-  width: 9%;
+  width: 9% !important;
 }
 
 .w10 {
-  width: 10%;
+  width: 10% !important;
 }
 
 .w11 {
-  width: 11%;
+  width: 11% !important;
 }
 
 .w12 {
-  width: 12%;
+  width: 12% !important;
 }
 
 .w13 {
-  width: 13%;
+  width: 13% !important;
 }
 
 .w14 {
-  width: 14%;
+  width: 14% !important;
 }
 
 .w15 {
-  width: 15%;
+  width: 15% !important;
 }
 
 .w16 {
-  width: 16%;
+  width: 16% !important;
 }
 
 .w17 {
-  width: 17%;
+  width: 17% !important;
 }
 
 .w18 {
-  width: 18%;
+  width: 18% !important;
 }
 
 .w19 {
-  width: 19%;
+  width: 19% !important;
 }
 
 .w20 {
-  width: 20%;
+  width: 20% !important;
 }
 
 .w21 {
-  width: 21%;
+  width: 21% !important;
 }
 
 .w22 {
-  width: 22%;
+  width: 22% !important;
 }
 
 .w23 {
-  width: 23%;
+  width: 23% !important;
 }
 
 .w24 {
-  width: 24%;
+  width: 24% !important;
 }
 
 .w25 {
-  width: 25%;
+  width: 25% !important;
 }
 
 .w26 {
-  width: 26%;
+  width: 26% !important;
 }
 
 .w27 {
-  width: 27%;
+  width: 27% !important;
 }
 
 .w28 {
-  width: 28%;
+  width: 28% !important;
 }
 
 .w29 {
-  width: 29%;
+  width: 29% !important;
 }
 
 .w30 {
-  width: 30%;
+  width: 30% !important;
 }
 
 .w31 {
-  width: 31%;
+  width: 31% !important;
 }
 
 .w32 {
-  width: 32%;
+  width: 32% !important;
 }
 
 .w33 {
-  width: 33%;
+  width: 33% !important;
 }
 
 .w34 {
-  width: 34%;
+  width: 34% !important;
 }
 
 .w35 {
-  width: 35%;
+  width: 35% !important;
 }
 
 .w36 {
-  width: 36%;
+  width: 36% !important;
 }
 
 .w37 {
-  width: 37%;
+  width: 37% !important;
 }
 
 .w38 {
-  width: 38%;
+  width: 38% !important;
 }
 
 .w39 {
-  width: 39%;
+  width: 39% !important;
 }
 
 .w40 {
-  width: 40%;
+  width: 40% !important;
 }
 
 .w41 {
-  width: 41%;
+  width: 41% !important;
 }
 
 .w42 {
-  width: 42%;
+  width: 42% !important;
 }
 
 .w43 {
-  width: 43%;
+  width: 43% !important;
 }
 
 .w44 {
-  width: 44%;
+  width: 44% !important;
 }
 
 .w45 {
-  width: 45%;
+  width: 45% !important;
 }
 
 .w46 {
-  width: 46%;
+  width: 46% !important;
 }
 
 .w47 {
-  width: 47%;
+  width: 47% !important;
 }
 
 .w48 {
-  width: 48%;
+  width: 48% !important;
 }
 
 .w49 {
-  width: 49%;
+  width: 49% !important;
 }
 
 .w50 {
-  width: 50%;
+  width: 50% !important;
 }
 
 .w51 {
-  width: 51%;
+  width: 51% !important;
 }
 
 .w52 {
-  width: 52%;
+  width: 52% !important;
 }
 
 .w53 {
-  width: 53%;
+  width: 53% !important;
 }
 
 .w54 {
-  width: 54%;
+  width: 54% !important;
 }
 
 .w55 {
-  width: 55%;
+  width: 55% !important;
 }
 
 .w56 {
-  width: 56%;
+  width: 56% !important;
 }
 
 .w57 {
-  width: 57%;
+  width: 57% !important;
 }
 
 .w58 {
-  width: 58%;
+  width: 58% !important;
 }
 
 .w59 {
-  width: 59%;
+  width: 59% !important;
 }
 
 .w60 {
-  width: 60%;
+  width: 60% !important;
 }
 
 .w61 {
-  width: 61%;
+  width: 61% !important;
 }
 
 .w62 {
-  width: 62%;
+  width: 62% !important;
 }
 
 .w63 {
-  width: 63%;
+  width: 63% !important;
 }
 
 .w64 {
-  width: 64%;
+  width: 64% !important;
 }
 
 .w65 {
-  width: 65%;
+  width: 65% !important;
 }
 
 .w66 {
-  width: 66%;
+  width: 66% !important;
 }
 
 .w67 {
-  width: 67%;
+  width: 67% !important;
 }
 
 .w68 {
-  width: 68%;
+  width: 68% !important;
 }
 
 .w69 {
-  width: 69%;
+  width: 69% !important;
 }
 
 .w70 {
-  width: 70%;
+  width: 70% !important;
 }
 
 .w71 {
-  width: 71%;
+  width: 71% !important;
 }
 
 .w72 {
-  width: 72%;
+  width: 72% !important;
 }
 
 .w73 {
-  width: 73%;
+  width: 73% !important;
 }
 
 .w74 {
-  width: 74%;
+  width: 74% !important;
 }
 
 .w75 {
-  width: 75%;
+  width: 75% !important;
 }
 
 .w76 {
-  width: 76%;
+  width: 76% !important;
 }
 
 .w77 {
-  width: 77%;
+  width: 77% !important;
 }
 
 .w78 {
-  width: 78%;
+  width: 78% !important;
 }
 
 .w79 {
-  width: 79%;
+  width: 79% !important;
 }
 
 .w80 {
-  width: 80%;
+  width: 80% !important;
 }
 
 .w81 {
-  width: 81%;
+  width: 81% !important;
 }
 
 .w82 {
-  width: 82%;
+  width: 82% !important;
 }
 
 .w83 {
-  width: 83%;
+  width: 83% !important;
 }
 
 .w84 {
-  width: 84%;
+  width: 84% !important;
 }
 
 .w85 {
-  width: 85%;
+  width: 85% !important;
 }
 
 .w86 {
-  width: 86%;
+  width: 86% !important;
 }
 
 .w87 {
-  width: 87%;
+  width: 87% !important;
 }
 
 .w88 {
-  width: 88%;
+  width: 88% !important;
 }
 
 .w89 {
-  width: 89%;
+  width: 89% !important;
 }
 
 .w90 {
-  width: 90%;
+  width: 90% !important;
 }
 
 .w91 {
-  width: 91%;
+  width: 91% !important;
 }
 
 .w92 {
-  width: 92%;
+  width: 92% !important;
 }
 
 .w93 {
-  width: 93%;
+  width: 93% !important;
 }
 
 .w94 {
-  width: 94%;
+  width: 94% !important;
 }
 
 .w95 {
-  width: 95%;
+  width: 95% !important;
 }
 
 .w96 {
-  width: 96%;
+  width: 96% !important;
 }
 
 .w97 {
-  width: 97%;
+  width: 97% !important;
 }
 
 .w98 {
-  width: 98%;
+  width: 98% !important;
 }
 
 .w99 {
-  width: 99%;
+  width: 99% !important;
 }
 
 .w100 {
-  width: 100%;
+  width: 100% !important;
 }
 
 /*============================
     Margins
 =============================*/
 .m-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .mt-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .mr-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .mb-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .ml-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 
 .m-05 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .mt-05 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .mr-05 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .mb-05 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .ml-05 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 
 .m-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .mt-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .mr-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .mb-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .ml-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 
 .m-15 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .mt-15 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .mr-15 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .mb-15 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .ml-15 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 
 .m-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .mt-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .mr-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .mb-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .ml-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 
 .m-25 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .mt-25 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .mr-25 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .mb-25 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .ml-25 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 
 .m-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .mt-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .mr-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .mb-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .ml-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 
 .m-35 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .mt-35 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .mr-35 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .mb-35 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .ml-35 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 
 .m-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .mt-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .mr-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .mb-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .ml-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 
 .m-45 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 
 .mt-45 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 
 .mr-45 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 
 .mb-45 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 
 .ml-45 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 
 .m-5 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 
 .mt-5 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 
 .mr-5 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 
 .mb-5 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 
 .ml-5 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 
 .m-55 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 
 .mt-55 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 
 .mr-55 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 
 .mb-55 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 
 .ml-55 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 
 .m-6 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 
 .mt-6 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 
 .mr-6 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 
 .mb-6 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 
 .ml-6 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 
 .m-65 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 
 .mt-65 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 
 .mr-65 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 
 .mb-65 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 
 .ml-65 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 
 .m-7 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 
 .mt-7 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 
 .mr-7 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 
 .mb-7 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 
 .ml-7 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 
 .m-75 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 
 .mt-75 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 
 .mr-75 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 
 .mb-75 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 
 .ml-75 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 
 .m-8 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 
 .mt-8 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 
 .mr-8 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 
 .mb-8 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 
 .ml-8 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 
 .m-85 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 
 .mt-85 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 
 .mr-85 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 
 .mb-85 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 
 .ml-85 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 
 .m-9 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 
 .mt-9 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 
 .mr-9 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 
 .mb-9 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 
 .ml-9 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 
 .m-95 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 
 .mt-95 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 
 .mr-95 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 
 .mb-95 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 
 .ml-95 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 
 /*=======================================
@@ -951,7 +950,16 @@ form a {
 }
 
 .in-flex-2elements > * {
-  width: 45%;
+  width: 45% !important;
+}
+
+/*=======================================
+*       Height
+=======================================*/
+.height-fit {
+  height: -moz-fit-content;
+  height: -webkit-fit-content;
+  height: fit-content;
 }
 
 /*============================
@@ -1200,8 +1208,13 @@ form a {
   transform: skew(-30deg);
 }
 .btn__text {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   transform: skew(30deg);
+}
+.btn__text svg {
+  fill: #fff;
+  margin-left: 0.6em;
 }
 .btn__left {
   position: absolute;
@@ -1574,7 +1587,7 @@ form .form-row button {
 }
 
 .gradient {
-  margin-bottom: 2em;
+  margin-bottom: 4em;
   width: 30%;
   background: #fff;
   color: #000;
@@ -1591,13 +1604,21 @@ form .form-row button {
 }
 .gradient_content_header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 95%;
   align-items: center;
 }
 .gradient_content_header p, .gradient_content_header div > span {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.2rem;
+}
+.gradient_content_header__title {
   font-weight: bold;
+  font-size: 1.2rem;
+}
+.gradient_content_header__author {
+  font-weight: 200;
+  color: #666;
+  font-size: 0.8rem;
 }
 .gradient_content_body {
   height: 12vh;
@@ -1605,6 +1626,72 @@ form .form-row button {
   margin-top: 2em;
   margin-right: auto;
   margin-left: auto;
+}
+
+.gradient_panel {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+.gradient_panel__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+.gradient_panel__header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.gradient_panel__header__titles {
+  margin-right: 4em;
+}
+.gradient_panel__header__titles__author {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 200;
+  font-style: italic;
+}
+.gradient_panel__header__favs {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.gradient_panel__body {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2em;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.gradient_panel__body_color {
+  margin: 0.2em;
+  height: 35vh;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.gradient_panel__body_color > span {
+  margin: 1em 0;
+  width: 6vh;
+  height: 6vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.gradient_panel__footer {
+  margin: 2em;
+  display: flex;
+  justify-content: space-around;
 }
 
 .ns_form {
@@ -2011,10 +2098,11 @@ form .form-row button {
 }
 /*Header Svgs*/
 #header_svgs {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
+  z-index: -1;
 }
 #header_svgs > svg {
   position: absolute;
@@ -2277,4 +2365,18 @@ form .form-row button {
   margin-left: auto;
   background: #fff;
   color: #000;
+}
+
+/*=======================================
+*       Code Samples
+=======================================*/
+.code_sample {
+  background: #1e293b;
+  border-radius: 2px;
+  padding: 1em;
+  margin: 1em;
+}
+.code_sample__item {
+  font-size: 0.9em !important;
+  white-space: pre-wrap !important;
 }
