--- a/resources/sass/_gradients.scss
+++ b/resources/sass/_gradients.scss
@@ -1,5 +1,5 @@
 .gradient{
-    margin-bottom: 2em;
+    margin-bottom: 4em;
     width: 30%;
 
     background: #fff;
@@ -19,13 +19,24 @@
 
         &_header{
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
+            width: 95%;
             align-items: center;
 
             p, div > span{
                 @include font('Montserrat');
-                font-size: 1.2rem;
+            }
+
+
+            &__title{
                 font-weight: bold;
+                font-size: 1.2rem;
+            }
+
+            &__author{
+                font-weight: 200;
+                color: #666;
+                font-size: 0.8rem;
             }
         }
 
@@ -38,4 +49,93 @@
         }
 
     }
+}
+
+
+.gradient_panel{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+
+    &__title{
+        @include font('Montserrat');
+        font-size: 1.4rem;
+        font-weight: bold;
+    }
+
+    &__header{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 90%;
+        @include center;
+
+        &__titles{
+            margin-right: 4em;
+
+            &__author{
+                @include font('Montserrat');
+                font-size: 0.8rem;
+                font-weight: 200;
+                font-style: italic;
+            }
+        }
+
+        &__favs{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+            p{
+
+            }
+            svg{
+
+            }
+        }
+    }
+
+    &__body{
+        display: flex;
+        justify-content: space-around;
+
+        margin-top: 2em;
+
+        width: 90%;
+        @include center;
+
+        &_color{
+            margin: 0.2em;
+            height: 35vh;
+            flex: 1;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            & > span{
+                margin: 1em 0;
+                width: 6vh;
+                height: 6vh;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                background: #fff;
+                border-radius: 50%;
+
+                cursor: pointer;
+            }
+        }
+    }
+
+    &__footer{
+        margin: 2em;
+
+        display: flex;
+        justify-content: space-around;
+    }
+
 }
