--- a/resources/sass/_spacing.scss
+++ b/resources/sass/_spacing.scss
@@ -8,7 +8,7 @@
     }
 
     .w#{$class}{
-        width: #{$i} + '%';
+        width: #{$i} + '%' !important;
     }
 }
 
@@ -19,19 +19,19 @@
 $i: 0;
 @while $i < 10{
     .m-#{str-replace(#{$i}, '.', '')}{
-        margin: #{$i}rem;
+        margin: #{$i}rem !important;
     }
     .mt-#{str-replace(#{$i}, '.', '')}{
-        margin: #{$i}rem;
+        margin: #{$i}rem !important;
     }
     .mr-#{str-replace(#{$i}, '.', '')}{
-        margin: #{$i}rem;
+        margin: #{$i}rem !important;
     }
     .mb-#{str-replace(#{$i}, '.', '')}{
-        margin: #{$i}rem;
+        margin: #{$i}rem !important;
     }
     .ml-#{str-replace(#{$i}, '.', '')}{
-        margin: #{$i}rem;
+        margin: #{$i}rem !important;
     }
 
     $i: $i + 0.5;
@@ -48,8 +48,16 @@ $i: 0;
 
 .in-flex-2elements{
     & > *{
-        width: 45%;
+        width: 45% !important;
     }
 }
 
+
+/*=======================================
+*       Height
+=======================================*/
+.height-fit{
+    height: -moz-fit-content;
+    height: fit-content;
+}
 
